--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 APP_NAME="Course"
 PORT="3030"
 COOKIE_SCREET="92340932840"
+
+# database
+DB_HOST="localhost"
+DB_PORT="5432"
+DB_DATABASE="course"
+DB_USERNAME="root"
+DB_PASSWORD="7890"
