--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ p
 .caches
 *.local
 public/uploaded_files/*
+# public/uploaded_files/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
