update: .env, middleare etc

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 APP_NAME="Course"
 PORT="3030"
-COOKIE_SCREET="92340932840"
 
 # database
 DB_HOST="localhost"
@@ -8,4 +7,7 @@ DB_PORT="5432"
 DB_DATABASE="course"
 DB_USERNAME="root"
 DB_PASSWORD="7890"
-API_TOKEN="this-my_token"
+
+# s
+COOKIE_SECRET="8)ImeB/)f~rG-1*(9a*d,:oTd|Z8Al<_rGaRz&|ku7flk-`3~h2-dw+zzeF=5"
+SESSION_SECRET="sIVJb7s@PQ!`OX~8&a&ZV_O};KwQ|IWW=n39Ayu<EE?z(Xpmk2#aA~vMJ3#ox:n7"
