--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "course",
   "version": "1.0.0",
-  "description": "course appliaction, web development, nodejs",
+  "description": "NodeJS Course aplication",
   "main": "main.js",
   "scripts": {
     "test": "test",
