update: change model query to letsql

--- a/.env
+++ b/.env
@@ -2,12 +2,20 @@ APP_NAME="Course"
 PORT="3030"
 
 # database
-DB_HOST="localhost"
-DB_PORT="5432"
-DB_DATABASE="course"
-DB_USERNAME="root"
-DB_PASSWORD="7890"
+# DB_HOST="localhost"
+# DB_PORT="5432"
+# DB_DATABASE="course"
+# DB_USERNAME="root"
+# DB_PASSWORD="7890"
+
+DB_HOST="127.0.0.1"
+DB_PORT="3306"
+DB_USER="root"
+DB_PASSWORD=
+DB_DATABASE="nodejs_course"
 
 # s
-COOKIE_SECRET="8)ImeB/)f~rG-1*(9a*d,:oTd|Z8Al<_rGaRz&|ku7flk-`3~h2-dw+zzeF=5"
+# COOKIE_SECRET="8)ImeB/)f~rG-1*(9a*d,:oTd|Z8Al<_rGaRz&|ku7flk-`3~h2-dw+zzeF=5"
+# SESSION_SECRET="sIVJb7s@PQ!`OX~8&a&ZV_O};KwQ|IWW=n39Ayu<EE?z(Xpmk2#aA~vMJ3#ox:n7"
+COOKIE_SECRET="key"
 SESSION_SECRET="sIVJb7s@PQ!`OX~8&a&ZV_O};KwQ|IWW=n39Ayu<EE?z(Xpmk2#aA~vMJ3#ox:n7"
